<resources>

    <string name="app_name">com.gvccracing.android.nookhome</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="all_apps">All Applications</string>
    <string name="title_activity_main">Nook Home</string>
	<string name="gvcc_racing_button_text">Back To Race Timing!</string>
    <string name="main_layout">Nook Home</string>
	<string name="main_layout_mem">Memory</string>
	<string name="main_launcher_nb_layout_b">B</string>
	<string name="main_launcher_nb_layout_battery">Battery</string>
	<string name="main_wifi_on">WiFi is On</string>
	<string name="main_wifi_off">WiFi is Off</string>
	<string name="main_wifi_toggle_title">WiFi Toggle</string>
	<string name="main_wifi_toggle_message">Do you wish to toggle the WiFi setting?</string>
	<string name="main_yes">Yes</string>
	<string name="main_no">No</string>
	<string name="main_setup_wifi">Setup Wifi</string>
	<string name="wifi_settings_title">Wifi Functions</string>
	<string name="wifi_settings_scan">Scan</string>
	<string name="wifi_settings_wifi_off">WiFi Off</string>
	<string name="wifi_settings_setup_wifi">Setup WiFi</string>
	<string name="wifi_settings_lock">Lock</string>
	<string name="wifi_settings_reboot">Reboot</string>
	<string name="wifi_settings_poweroff">Power Off</string>
	<string name="wifi_settings_disks_partitions">Disks/partitions</string>
	<string name="wifi_settings_mount_mountpoint">Mount point</string>
	<string name="wifi_settings_mount_FS">FS</string>
	<string name="wifi_settings_mount_total">total</string>
	<string name="wifi_settings_mount_used">used</string>
	<string name="wifi_settings_mount_free">free</string>
	<string name="wifi_settings_mount_rorw">RO/RW</string>
	<string name="wifi_settings_mount_ro">RO</string>
	<string name="wifi_settings_mount_rw">RW</string>
	<string name="wifi_settings_level">Level:</string>
	<string name="wifi_settings_connected">Connected, IP:</string>	
	<string name="wifi_settings_not_in_range">Not in Range</string>
	<string name="wifi_settings_not_configured">Not Configured</string>
	<string name="wifi_settings_turning_wifi_off">Turn WiFi Off</string>
	<string name="wifi_settings_turning_wifi_on">Turn WiFi On</string>
	<string name="shell">/system/bin/sh -</string>
	<string name="power_functions_root_only">Implemented only on rooted device.</string>
	<string name="power_functions_reboot_confirm_title">Reboot confirmation</string>
	<string name="power_functions_reboot_confirm_text">Are you sure to reboot your device ? </string>
	<string name="power_functions_poweroff_confirm_title">Power Off confirmation</string>
	<string name="power_functions_poweroff_confirm_text">Are you sure to power off your device ? </string>
	<string name="power_functions_yes">YES</string>
	<string name="power_functions_no">NO</string>
	<string name="reboot_layout_text">Rebooting Time Trial Device\n\nPlease Wait..</string>
	<string name="poweroff_layout_text">Time Trial Device is now Off\n\nUse Power button to start again..</string>
	<string name="launch_application_activity">Activity</string>
	<string name="launch_application_not_found">not found!</string>
	<string name="launch_application_title">Launch Application</string>	
</resources>